[gd_scene load_steps=9 format=2]

[ext_resource path="res://hypergodot/hyper_gossip/hyper_gossip.gd" type="Script" id=1]
[ext_resource path="res://main.gd" type="Script" id=2]
[ext_resource path="res://hypergodot/hyper_gateway/hyper_gateway.gd" type="Script" id=3]
[ext_resource path="res://hypergodot/hyper_godot_core.gd" type="Script" id=4]
[ext_resource path="res://game/player/player_core_local.tscn" type="PackedScene" id=5]
[ext_resource path="res://hypergodot/hyper_debugui/hyper_debugui.tscn" type="PackedScene" id=6]
[ext_resource path="res://game/maps/map_witch_island/map_witch_island.scn" type="PackedScene" id=7]
[ext_resource path="res://game/maps/map_core.gd" type="Script" id=8]

[node name="Main" type="Node"]
script = ExtResource( 2 )

[node name="UI" type="Node" parent="."]

[node name="Control" type="Control" parent="UI"]
margin_right = 1440.0
margin_bottom = 810.0
mouse_filter = 2

[node name="Main" type="Control" parent="UI/Control"]
visible = false
margin_right = 1441.0
margin_bottom = 810.0

[node name="CenterContainer" type="CenterContainer" parent="UI/Control/Main"]
margin_right = 1440.0
margin_bottom = 810.0

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Control/Main/CenterContainer"]
margin_left = 677.0
margin_top = 350.0
margin_right = 763.0
margin_bottom = 460.0

[node name="Witchy World" type="Label" parent="UI/Control/Main/CenterContainer/VBoxContainer"]
margin_right = 86.0
margin_bottom = 14.0
text = "Witchy World"
align = 1

[node name="Resume" type="Button" parent="UI/Control/Main/CenterContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 86.0
margin_bottom = 38.0
text = "Resume"

[node name="Settings" type="Button" parent="UI/Control/Main/CenterContainer/VBoxContainer"]
margin_top = 42.0
margin_right = 86.0
margin_bottom = 62.0
text = "Settings"

[node name="Multiplayer" type="Button" parent="UI/Control/Main/CenterContainer/VBoxContainer"]
margin_top = 66.0
margin_right = 86.0
margin_bottom = 86.0
text = "Multiplayer"

[node name="Quit" type="Button" parent="UI/Control/Main/CenterContainer/VBoxContainer"]
margin_top = 90.0
margin_right = 86.0
margin_bottom = 110.0
text = "Quit"

[node name="Settings" type="VBoxContainer" parent="UI/Control"]
margin_right = 1440.0
margin_bottom = 810.0

[node name="Shadows" type="HBoxContainer" parent="UI/Control/Settings"]
margin_right = 1440.0
margin_bottom = 20.0

[node name="Label" type="Label" parent="UI/Control/Settings/Shadows"]
margin_top = 3.0
margin_right = 63.0
margin_bottom = 17.0
text = "Shadows :"

[node name="High" type="Button" parent="UI/Control/Settings/Shadows"]
margin_left = 67.0
margin_right = 108.0
margin_bottom = 20.0
text = "High"

[node name="Low" type="Button" parent="UI/Control/Settings/Shadows"]
margin_left = 112.0
margin_right = 149.0
margin_bottom = 20.0
text = "Low"

[node name="Disabled" type="Button" parent="UI/Control/Settings/Shadows"]
margin_left = 153.0
margin_right = 221.0
margin_bottom = 20.0
text = "Disabled"

[node name="Maps" type="Node" parent="."]

[node name="map_witch_island" parent="Maps" instance=ExtResource( 7 )]
script = ExtResource( 8 )
map_name = "map_witch_island"

[node name="Players" type="Node" parent="."]

[node name="PlayerCoreLocal" parent="Players" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 148.744, 30.6945, 125.871 )

[node name="HyperGodot" type="Node" parent="."]
script = ExtResource( 4 )

[node name="HyperGateway" type="Node" parent="HyperGodot"]
script = ExtResource( 3 )

[node name="HyperGossip" type="Node" parent="HyperGodot"]
script = ExtResource( 1 )

[node name="HyperDebugUI" parent="HyperGodot" instance=ExtResource( 6 )]

[node name="LocalSnapshotTimer" type="Timer" parent="HyperGodot"]
autostart = true

[connection signal="started_gateway" from="HyperGodot/HyperGateway" to="HyperGodot" method="_on_HyperGateway_started_gateway"]
[connection signal="stopped_gateway" from="HyperGodot/HyperGateway" to="HyperGodot" method="_on_HyperGateway_stopped_gateway"]
[connection signal="event" from="HyperGodot/HyperGossip" to="HyperGodot" method="_on_HyperGossip_event"]
[connection signal="listening" from="HyperGodot/HyperGossip" to="HyperGodot" method="_on_HyperGossip_listening"]
[connection signal="gossip_update_rate_changed" from="HyperGodot/HyperDebugUI" to="HyperGodot" method="_on_HyperDebugUI_gossip_update_rate_changed"]
[connection signal="timeout" from="HyperGodot/LocalSnapshotTimer" to="HyperGodot" method="_on_LocalSnapshotTimer_timeout"]
